Updated the div ids for topnav behavior and fixed the wrong width of sql skill

--- a/public/globals.css
+++ b/public/globals.css
@@ -86,6 +86,6 @@
     from  {
         width: 0%;
     } to {
-        width: 80%;
+        width: 75%;
     }
 }
